[package]
name = "zmq_message_router"
version = "0.1.1"
authors = ["StefanMallia <5004438+StefanMallia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
zmq = "0.9"
rust_log = {version = "0.3.1", git="https://github.com/StefanMallia/rust_log", branch="main"}
