[package]
name = "zeromq_rust_experiments"
version = "0.1.0"
authors = ["StefanMallia <5004438+StefanMallia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
req_client = {path="../../../client/"}
config_loader = {version = "0.1.0", git="https://github.com/StefanMallia/config_loader", branch="main"}
